--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12793,8 +12793,8 @@ figcaption {
   text-transform: uppercase;
   letter-spacing: 2px;
   font-weight: 300;
-  color: var(--color-lightn);
-  display: inline-block;
+  color: var(--color-red) !important;
+  display: inline-block;  
   margin-bottom: 20px;
 }
 .slide .social-share-inner-left .social-share {
@@ -16846,6 +16846,11 @@ span.sr-only {
 .sticky-home-wrapper .rn-skill-area .inner .skill-share-inner.skill-share-inner-width li img {
   max-width: 30px;
 }
+
+.single-card-sticky .card-list .title {
+  color: var(--color-body-white) !important; 
+}
+
 .sticky-home-wrapper .single-card-sticky .card-list {
   margin: 0;
   padding: 0;
